# media-generator

./: .example.env  .gitignore  Dockerfile.api  Dockerfile.batch  Dockerfile.convert  README.md  batch-entrypoint.sh  batch-init-models.sh  batch_poster_generate.py  convert_thumbnails.py  docker-compose.batch.yml  docker-compose.yml  generate_actor_images.py  generate_actor_prompts.py  generate_director_images.py  generate_director_prompts.py  media_generator.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
api/: __init__.py  gunicorn_conf.py  main.py  models.py
db-init/: entrypoint.sh  init-db.sql
lib/: __init__.py  aoai_model.py  cli.py  critic_review.py  generator.py  image.py  local_openai_model.py  media.py
templates/: prompts.json
